--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -1,4 +1,4 @@
-name: Frontend Deploy (Static Web Apps)
+name: Build and deploy frontend (Azure Static Web Apps)
 
 on:
   push:
@@ -13,14 +13,25 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-      - name: Install
+      - name: Install dependencies
         run: |
           cd frontend
-          npm install
+          npm ci
       - name: Build
         run: |
           cd frontend
           npm run build
-      # Add deployment action for Azure Static Web Apps here
-      - name: NOTE
-        run: echo "Add your Azure Static Web Apps deployment action and configure secrets"
+      - name: Deploy to Azure Static Web Apps
+        uses: Azure/static-web-apps-deploy@v1
+        with:
+          azure_static_web_apps_api_token: ${{ secrets.AZURE_STATIC_WEB_APPS_API_TOKEN }} # required: set this secret from your Static Web App resource
+          repo_token: ${{ secrets.GITHUB_TOKEN }} # optional, used for PR comments
+          action: "upload"
+          app_location: "frontend"
+          api_location: "" # keep empty because API is deployed separately as Azure Functions
+          app_artifact_location: "frontend/dist"
+
+# Notes:
+# - Create an Azure Static Web App resource in the Azure portal and add the generated deployment token to this repo's secrets as AZURE_STATIC_WEB_APPS_API_TOKEN.
+# - Adjust app_artifact_location if your build output folder differs.
+
