--- a/.github/workflows/frontend-deploy.yml
+++ b/.github/workflows/frontend-deploy.yml
@@ -16,7 +16,12 @@ jobs:
       - name: Install dependencies
         run: |
           cd frontend
-          npm ci
+          # Use strict `npm ci` when a lockfile exists for reproducible installs; otherwise fall back to `npm install`.
+          if [ -f package-lock.json ]; then
+            npm ci
+          else
+            npm install
+          fi
       - name: Build
         run: |
           cd frontend
