infra: default deploy location -> eastus2 (avoid resource conflicts)

--- a/.github/workflows/infra-deploy.yml
+++ b/.github/workflows/infra-deploy.yml
@@ -10,7 +10,7 @@ on:
       location:
         description: 'Azure location'
         required: true
-        default: 'eastus'
+        default: 'eastus2'
   push:
     branches: [ main ]
 
