--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,12 +13,13 @@
     "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
-    "typescript": "^5.6.2",
-    "vite": "^5.3.0",
     "@types/react": "^18.2.28",
     "@types/react-dom": "^18.2.11",
-    "tailwindcss": "^3.3.2",
+    "@vitejs/plugin-react": "^5.1.2",
+    "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
-    "autoprefixer": "^10.4.0"
+    "tailwindcss": "^3.3.2",
+    "typescript": "^5.6.2",
+    "vite": "^5.3.0"
   }
 }
