Modify to deploy backend to FunctionApp

--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -7,37 +7,23 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
-    env:
-      HAS_APP_NAME: ${{ secrets.AZURE_FUNCTION_APP_NAME }}
-      HAS_PUBLISH_PROFILE: ${{ secrets.FUNCTIONS_PUBLISH_PROFILE }}
+
     steps:
       - uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r api/requirements.txt
-      - name: Login to Azure
-        uses: azure/login@v1
-        with:
-          creds: ${{ secrets.AZURE_CREDENTIALS }} # JSON from `az ad sp create-for-rbac --sdk-auth`
-      - name: Deploy to Azure Functions (using publish profile)
-        if: ${{ env.HAS_APP_NAME != '' && env.HAS_PUBLISH_PROFILE != '' }}
+
+      - name: Deploy to Azure Functions
         uses: azure/functions-action@v1
         with:
-          app-name: ${{ secrets.AZURE_FUNCTION_APP_NAME }} # set your Function App name as a secret
+          app-name: ${{ secrets.AZURE_FUNCTION_APP_NAME }}
           package: './api'
-          publish-profile: ${{ secrets.FUNCTIONS_PUBLISH_PROFILE }} # alternative to using AZURE_CREDENTIALS
-
-      - name: Skip Function App deploy (no AZURE_FUNCTION_APP_NAME)
-        if: ${{ env.HAS_APP_NAME == '' || env.HAS_PUBLISH_PROFILE == '' }}
-        run: echo "AZURE_FUNCTION_APP_NAME not set; skipping Function App deployment. Using Static Web Apps integrated functions instead."
-
-# Notes:
-# - You can set up deployment either with a Service Principal (AZURE_CREDENTIALS) or with a publish profile (FUNCTIONS_PUBLISH_PROFILE). Configure one of them as a repo secret.
-# - Obtain a publish profile from the Azure Portal (Function App -> Get publish profile) and add it to repo secrets.
-# - Set AZURE_FUNCTION_APP_NAME as a repo secret with the name of your Function App.
-
+          publish-profile: ${{ secrets.FUNCTIONS_PUBLISH_PROFILE }}
