--- a/.github/workflows/infra-deploy.yml
+++ b/.github/workflows/infra-deploy.yml
@@ -15,11 +15,16 @@ on:
     branches: [ main ]
 
 env:
+  RESOURCE_GROUP: ${{ github.event.inputs.resource_group || 'delhivery-rg' }}
+  LOCATION: ${{ github.event.inputs.location || 'eastus2' }}
   BICEP_FILE: 'bicep/main.bicep'
+  FUNCTION_APP_NAME: 'delhivery-api-func'
+  STATIC_WEB_APP_NAME: 'delhivery-static'
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v4
 
@@ -28,28 +33,28 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Ensure resource group exists (create if missing)
+      - name: Ensure resource group exists
         run: |
-          RG=${{ github.event.inputs.resource_group || 'delhivery-rg' }}
-          LOCATION=${{ github.event.inputs.location || 'eastus2' }}
-          echo "Checking resource group '$RG'..."
-          if az group show --name "$RG" >/dev/null 2>&1; then
-            EXISTING_LOC=$(az group show --name "$RG" --query location -o tsv)
-            echo "Resource group '$RG' exists in location '$EXISTING_LOC'. Will deploy resources to '$LOCATION' (resource group location is immutable)."
+          echo "Checking resource group '$RESOURCE_GROUP'..."
+          if az group show --name "$RESOURCE_GROUP" >/dev/null 2>&1; then
+            echo "Resource group '$RESOURCE_GROUP' already exists."
           else
-            echo "Creating resource group '$RG' in location '$LOCATION'..."
-            az group create --name "$RG" --location "$LOCATION"
+            echo "Creating resource group '$RESOURCE_GROUP' in '$LOCATION'..."
+            az group create \
+              --name "$RESOURCE_GROUP" \
+              --location "$LOCATION"
           fi
 
       - name: Deploy Bicep template
         run: |
           az deployment group create \
-            --resource-group ${{ github.event.inputs.resource_group || 'delhivery-rg' }} \
-            --template-file $BICEP_FILE \
-            --parameters postgresAdminPassword="${{ secrets.POSTGRES_ADMIN_PASSWORD }}" \
-            --parameters staticWebAppName="delhivery-static" \
-            --parameters location="${{ github.event.inputs.location || 'eastus2' }}"
+            --resource-group "$RESOURCE_GROUP" \
+            --template-file "$BICEP_FILE" \
+            --parameters \
+              location="$LOCATION" \
+              staticWebAppName="$STATIC_WEB_APP_NAME" \
+              functionAppName="$FUNCTION_APP_NAME" \
+              postgresAdminPassword="${{ secrets.POSTGRES_ADMIN_PASSWORD }}"
 
       - name: Output deployment info
-        run: |
-          echo "Deployment complete. Check resources in the Azure Portal or use 'az group deployment show' to review outputs."
+        run: echo "Infrastructure deployment completed successfully."
