--- a/.github/workflows/backend-deploy.yml
+++ b/.github/workflows/backend-deploy.yml
@@ -30,5 +30,5 @@ jobs:
         uses: azure/functions-action@v1
         with:
           app-name: ${{ secrets.AZURE_FUNCTION_APP_NAME }}
-          package: './api'
+          package: './backend'
           publish-profile: ${{ secrets.FUNCTIONS_PUBLISH_PROFILE }}
